<resources>
    <string name="app_name">L05_06</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="main_activity_button_share">Share</string>
    <string name="main_activity_hint_edit_book">Enter Book</string>
    <string name="main_activity_hint_edit_chapter">Enter Chapter</string>
    <string name="main_activity_hint_edit_verse">Enter Verse</string>
    <string name="main_activity_book_label">Book</string>
    <string name="main_activity_chapter_label">Chapter</string>
    <string name="main_activity_verse_label">Verse(s)</string>
    <string name="display_message_activity_label">Your favorite scripture is:&#160;</string>
</resources>
